welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: value update is not a member of Boolean
while (sortieTrouvee()=false){
       ^Poucet:5: error: value update is not a member of Boolean
	if (estSurBiscuit()=true) Biscuit=Biscuit+1
            ^